FullQa New/src/objects/Marketing_Project_Request__c.object
<CustomObject>
    <description>To track all requests for Marketing, associate them to a campaign and create reporting on status
Integrated: No
BizDev/Marketing: Liz Anderson</description>
    <fields>
        <fullName>Campaign_Due_Date__c</fullName>
        <formula>RelatedCampaign__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Link__c</fullName>
        <formula>HYPERLINK( &quot;https://na2.salesforce.com/&quot;&amp;RelatedCampaign__c ,  RelatedCampaign__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACP</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Ecomm</fullName>
                </value>
                <value>
                    <fullName>Emerging ERP</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Non-Channel Specific</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>VSB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Update Request: https://jira.avalara.com/browse/IBST-9890 [removed Help Text]</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MM (to be completed by PMM only)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Project_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <inlineHelpText>Any details we should know about? 
What kind of project is this? 
Do you have a topic or would you like us to select one? 
If this is a webinar, list the drop dates. 
How is the partner promoting this?</inlineHelpText>
        <label>Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Marketing_Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Actual_Bookings__c</fullName>
        <formula>Partner_Account__r.Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Actual Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Actual_Deals__c</fullName>
        <formula>Partner_Account__r.Total_Deals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Actual Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Actual_Opps__c</fullName>
        <formula>Partner_Account__r.Total_Opps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Actual Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_BITB_Sign_up_Date__c</fullName>
        <formula>Partner_Account__r.BLUE_in_the_Box_Sign_Up_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner BIAB Sign-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Category__c</fullName>
        <description>Partner  Category is pulled from the Partner account field
Integrated: No
Liz Anderson</description>
        <formula>Text(Partner_Account__r.Partner_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Contact lookup is limited to the contacts associated to the partner account
Integrated: No
Partner Programs: Liz Anderson</description>
        <inlineHelpText>The Partner Account must be populated on the request first. Then the contact from that partner will be available for lookup selection.</inlineHelpText>
        <label>Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The partner contact chosen is not associated to the saved Partner account on this record.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Account__c</valueField>
            </filterItems>
            <infoMessage>Lookup Active Partner Contacts here</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Programs Requests</relationshipLabel>
        <relationshipName>Partner_Programs_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_OITB_Sign_up_Date__c</fullName>
        <formula>Partner_Account__r.ORANGE_in_the_Box_Sign_Up_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner OIAB Sign-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_PPM_Email__c</fullName>
        <description>Partner PMM email stamped onto record using workflow rule. Used to notify Partner PMM;s when requests are overdue.</description>
        <label>Partner PMM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_PPM__c</fullName>
        <formula>Partner_Account__r.Secondary_CDM__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner PMM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_SAM__c</fullName>
        <formula>Partner_Account__r.CDM__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner SAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Territory__c</fullName>
        <description>Pulls the Partner Accounts Partner Territory Field.
Integrated: No
Liz Anderson</description>
        <formula>Text(Partner_Account__r.Partner_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <label>Project Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RelatedCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Marketing_Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Update Request: https://jira.avalara.com/browse/IBST-9890 [added and deactivated few picklist values]</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADR/SDR Call Campaign</fullName>
                </value>
                <value>
                    <fullName>Banner Ad</fullName>
                </value>
                <value>
                    <fullName>Banner Campaign - GDN, AdRoll, LLA</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Database Score</fullName>
                </value>
                <value>
                    <fullName>Datasheet</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event Budget Request</fullName>
                </value>
                <value>
                    <fullName>Graphic</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Legal Contract Review</fullName>
                </value>
                <value>
                    <fullName>List Clean Up</fullName>
                </value>
                <value>
                    <fullName>List Import</fullName>
                </value>
                <value>
                    <fullName>Non-Event Budget Request</fullName>
                </value>
                <value>
                    <fullName>Organic Social Media Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid Social Campaign</fullName>
                </value>
                <value>
                    <fullName>Partner Contacts Trained Import</fullName>
                </value>
                <value>
                    <fullName>Partner Website Content</fullName>
                </value>
                <value>
                    <fullName>PPC Ad Campaign w/ Copy</fullName>
                </value>
                <value>
                    <fullName>PPT Deck</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Print Ads</fullName>
                </value>
                <value>
                    <fullName>Retargeting Campaign</fullName>
                </value>
                <value>
                    <fullName>Spiff Request</fullName>
                </value>
                <value>
                    <fullName>Sweet Suite Direct Mail Campaign</fullName>
                </value>
                <value>
                    <fullName>Video Creation</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAM_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Strategic Alliance Manager or RSM for related Account</description>
        <inlineHelpText>Strategic Alliance Manager for related Account</inlineHelpText>
        <label>SAM/RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Project_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Dateformula__c</fullName>
        <formula>Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_byformula__c</fullName>
        <formula>Submitted_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submittedforumla__c</fullName>
        <formula>Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Programs Request</label>
    <listViews>
        <fullName>Amanda_s_CY_PPRs_ALL</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>PPM__c</columns>
        <columns>SAM_RSM__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Amanda O&apos;Neil</value>
        </filters>
        <label>Amanda&apos;s CY PPRs - ALL</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amanda_s_Completed_Projects</fullName>
        <columns>SAM_RSM__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>NAME</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Amanda O&apos;Neil</value>
        </filters>
        <label>Amanda&apos;s Completed Projects</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amanda_s_Open_PPRs</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>PPM__c</columns>
        <columns>SAM_RSM__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Submittedforumla__c</columns>
        <columns>Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Amanda O&apos;Neil</value>
        </filters>
        <label>Amanda&apos;s Open PPRs</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amanda_s_Open_Projects_Next_30_Days</fullName>
        <columns>SAM_RSM__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_Contact__c</columns>
        <columns>NAME</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Marketing_Manager__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Amanda O&apos;Neil</value>
        </filters>
        <label>Amanda&apos;s Open Projects - Next 30 Days</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Christi_s_Open_Projects</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Overview__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Christi Whipple</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Aborted</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Christi&apos;s Open Projects</label>
    </listViews>
    <listViews>
        <fullName>Courtney_Floyd_s_Open_PPRs</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>PPM__c</columns>
        <columns>SAM_RSM__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <filters>
            <field>Marketing_Manager__c</field>
            <operation>equals</operation>
            <value>Courtney Floyd,Madison Sherer</value>
        </filters>
        <label>Courtney Floyd&apos;s Open PPRs</label>
    </listViews>
    <listViews>
        <fullName>Courtney_s_CY_PPRs_ALL1</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>PPM__c</columns>
        <columns>SAM_RSM__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Marketing_Manager__c</field>
            <operation>equals</operation>
            <value>Courtney Floyd</value>
        </filters>
        <label>Courtney&apos;s CY PPRs - ALL</label>
    </listViews>
    <listViews>
        <fullName>Courtney_s_Marketing_Project_Requests</fullName>
        <columns>NAME</columns>
        <columns>SAM_RSM__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Courtney McFarlane</value>
        </filters>
        <label>Courtney&apos;s Marketing Project Requests</label>
    </listViews>
    <listViews>
        <fullName>Kelleigh_and_Minerva_Open_PPRs</fullName>
        <columns>PPM__c</columns>
        <columns>SAM_RSM__c</columns>
        <columns>Partner_Contact__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>NAME</columns>
        <columns>Submitted__c</columns>
        <columns>Submittedforumla__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PPM__c</field>
            <operation>contains</operation>
            <value>kelleigh,minerva</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Kelleigh and Minerva Open PPRs</label>
    </listViews>
    <listViews>
        <fullName>Kelleigh_s_Marketing_Project_Requests</fullName>
        <columns>NAME</columns>
        <columns>SAM_RSM__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted__c</columns>
        <columns>PPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>kelleigh tegels nelson</value>
        </filters>
        <label>Kelleigh&apos;s Marketing Project Requests</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lizzy_Partner_Program_Requests</fullName>
        <columns>NAME</columns>
        <columns>SAM_RSM__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted__c</columns>
        <columns>PPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Lizzy Ploen</value>
        </filters>
        <label>Lizzy Partner Program Requests</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MT_PPRs</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted__c</columns>
        <columns>PPM__c</columns>
        <columns>Marketing_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PPM__c</field>
            <operation>equals</operation>
            <value>Minerva Thai</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Aborted</value>
        </filters>
        <label>Minerva&apos;s PPRs</label>
        <sharedTo>
            <group>PPM_Partner_Program_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Megan_Mitchell_Open_Tasks</fullName>
        <columns>Status__c</columns>
        <columns>Campaign_Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Overview__c</columns>
        <columns>Project_Details__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Megan Mitchell Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>Nancy_s_PPR_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Campaign_Due_Date__c</columns>
        <columns>Partner_Territory__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SAM_RSM__c</columns>
        <columns>Marketing_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_PPM__c</field>
            <operation>equals</operation>
            <value>nancy gigante</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Nancy&apos;s Open PPR Requests</label>
    </listViews>
    <listViews>
        <fullName>Nancy_s_PPR_Requests1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Campaign_Due_Date__c</columns>
        <columns>Campaign_Link__c</columns>
        <columns>Status__c</columns>
        <columns>Overview__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_Territory__c</columns>
        <columns>SAM_RSM__c</columns>
        <columns>Marketing_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_PPM__c</field>
            <operation>equals</operation>
            <value>nancy gigante</value>
        </filters>
        <label>Nancy&apos;s  PPR Requests - All</label>
    </listViews>
    <nameField>
        <label>Partner Program Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Programs Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>